src/objects/KS_GlobalTriggerControl__mdt.object
<CustomObject>
    <fields>
        <fullName>KS_TriggerActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_TriggerFunction__c</fullName>
        <label>Trigger Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_TriggerName__c</fullName>
        <label>Trigger Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Global Trigger Control</label>
    <pluralLabel>Global Trigger Controls</pluralLabel>
</CustomObject>